--- a/v1/index.html
+++ b/v1/index.html
@@ -19,33 +19,79 @@
         <link rel="icon" href="favicon.ico" type="image/ico" />
 		<script src="js/modernizr.custom.2.6.2.min.js"></script>
 	</head>
-	<body class="box-layout home">
+	<body class="full-layout home">
         <div class="wrapper">
+<!-- TOP BAR -->
+            <div class="topbar">
+                <div class="grid">
+                    <nav class="topbarnav-left">
+                        <ul>
+                            <li><a href="" title="">Link 1</a></li>
+                            <li><a href="" title="">Link 2</a></li>
+                            <li><a href="" title="">Link 3</a></li>
+                            <li><a href="" title="">Link 4</a></li>
+                        </ul>
+                    </nav>
+                    <nav class="topbarnav-right">
+                        <ul>
+                            <li><a href="" title=""><img src="images/img.png" alt="" /></a></li>
+                            <li><a href="" title=""><img src="images/img.png" alt="" /></a></li>
+                            <li><a href="" title=""><img src="images/img.png" alt="" /></a></li>
+                            <li><a href="" title=""><img src="images/img.png" alt="" /></a></li>
+                            <li><a href="" title=""><img src="images/img.png" alt="" /></a></li>
+                            <li><a href="" title=""><img src="images/img.png" alt="" /></a></li>
+                            <li><a href="" title=""><img src="images/img.png" alt="" /></a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+<!-- END TOP BAR -->
 <!-- HEADER -->
             <header>
                 <div class="grid">
-                    <h1 class="logo"><a href="" title="">Web Template</a></h1>
+                    <h1 class="logo"><a href="" title="">LOGO</a></h1>
+                    <div class="headinfo">
+                        <h4>Header Info Text</h4>
+                        <img src="images/img.png" alt="">
+                    </div>
 <!-- MAIN MENU -->
-                    <nav class="mainnav">
-                        <ul class="sf-menu">
-                            <li class="active"><a href="" title="">Home</a></li>
-                            <li><a href="" title="">Menu 1</a></li>
-                            <li><a href="" title="">Menu 2</a></li>
-                            <li><a href="" title="">Menu 3 with dropdown</a>
-                                <ul>
-                                    <li><a href="" title="">Sub Menu 1</a>
-                                    <li><a href="" title="">Sub Menu 2</a>
-                                    <li><a href="" title="">Sub Menu 3</a>
-                                    <li><a href="" title="">Sub Menu 4</a>
-                                    <li><a href="" title="">Sub Menu 5</a>
+                    <div class="clear"></div>   
+                        <div class="mainnav-wrapper">
+                            <nav class="mainnav">
+                                <ul class="sf-menu">
+                                    <li class="active"><a href="" title="">Home</a></li>
+                                    <li><a href="" title="">Menu 1</a></li>
+                                    <li><a href="" title="">Menu 2</a></li>
+                                    <li><a href="" title="">Menu 3 with dropdown</a>
+                                        <ul>
+                                            <li><a href="" title="">Sub Menu 1</a></li>
+                                            <li><a href="" title="">Sub Menu 2</a></li>
+                                            <li><a href="" title="">Sub Menu 3</a></li>
+                                            <li><a href="" title="">Sub Menu 4 with sub</a>
+                                                <ul>
+                                                    <li><a href="" title="">Sub Sub Menu 1</a></li>
+                                                    <li><a href="" title="">Sub Sub Menu 2</a></li>
+                                                    <li><a href="" title="">Sub Sub Menu 3</a></li>
+                                                    <li><a href="" title="">Sub Sub Menu 4</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="" title="">Sub Menu 5</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="" title="">Menu 4 with dropdown</a>
+                                        <ul>
+                                            <li><a href="" title="">Sub Menu 1</a></li>
+                                            <li><a href="" title="">Sub Menu 2</a></li>
+                                            <li><a href="" title="">Sub Menu 3</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="" title="">Menu 5</a></li>
+                                    <li><a href="" title="">Menu 6</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="" title="">Menu 4</a></li>
-                            <li><a href="" title="">Menu 5</a></li>
-                        </ul>
-                    </nav>
+                            </nav>
+                        </div>
 <!-- END MAIN MENU -->
-<!-- SLIDER -->
+<!-- SLIDER >
                     <div class="slider">
                         <div class="slider-wrapper theme-default">
                             <div id="slider" class="nivoSlider">
@@ -55,22 +101,22 @@
                             </div>
                         </div>
                     </div>
-<!-- END SLIDER -->
+< END SLIDER -->
                 </div>
             </header>
 <!-- END HEADER -->
 <!-- CONTAINER -->
             <div class="container">
                 <div class="grid">
-<!-- SIDEBAR -->
+<!-- SIDEBAR >
                     <aside>
-<!-- TOP SIDEBAR BANNER -->
+<!-- TOP SIDEBAR BANNER >
                         <div class="topsidebanner">
                             <a href="" title=""><img src="uploads/banner-250x125-1.jpg" alt="" /></a>
                             <a href="" title=""><img src="uploads/banner-250x80.jpg" alt="" /></a>
                         </div>
 <!-- END TOP SIDEBAR BANNER -->
-<!-- LOGIN -->
+<!-- LOGIN >
                         <div class="login-panel">
                             <h4>ระบบสมาชิก</h4>
                             <form action="">
@@ -83,7 +129,7 @@
                             </form>
                         </div>
 <!-- END LOGIN -->
-<!-- VIDEO -->
+<!-- VIDEO >
                         <div class="videochannel">
                             <h4>วีดีโอ</h4>
                             <div class="channel">
@@ -99,18 +145,18 @@
                             </ul>
                         </div>
 <!-- END VIDEO -->
-<!-- BOTTOM SIDEBAR BANNER -->
+<!-- BOTTOM SIDEBAR BANNER >
                         <div class="bottomsidebanner">
                             <a href="" title=""><img src="uploads/banner-250x100-1.jpg" alt="" /></a>
                             <a href="" title=""><img src="uploads/banner-250x100-2.jpg" alt="" /></a>
                             <a href="" title=""><img src="uploads/banner-250x100-3.jpg" alt="" /></a>
                         </div>
-<!-- END BOTTOM SIDEBAR BANNER -->
+<!-- END BOTTOM SIDEBAR BANNER >
                     </aside>
 <!-- END SIDEBAR -->
-<!-- CONTENT -->
+<!-- CONTENT >
                     <div class="content">
-<!-- PROMOTION -->
+<!-- PROMOTION >
                         <div class="promotion shadowbg">
                             <hgroup class="title">
                                 <h2>Srikrung <span>โปรโมชั่น</span></h2>
@@ -128,7 +174,7 @@
                             </div>
                         </div>
 <!-- END PROMOTION -->
-<!-- CAROUSEL -->
+<!-- CAROUSEL >
                         <div class="carousel">
                             <ul id="carousel">
                                 <li><a href="" title=""><img src="uploads/banner-200x80-1.jpg" /></a></li>
@@ -141,7 +187,7 @@
                         </div>
 <!-- END CAROUSEL -->
                         <div class="newsannouncement shadowbg">
-<!-- NEWS -->
+<!-- NEWS >
                             <div class="news">
                                 <hgroup class="title">
                                     <h2>ข่าวสาร <span>ประกันภัย</span></h2>
@@ -157,7 +203,7 @@
                                 <a class="viewall" href="" title="ดูทั้งหมด">ดูทั้งหมด</a>
                             </div>
 <!-- END NEWS -->
-<!-- ANNOUNCEMENT -->
+<!-- ANNOUNCEMENT >
                             <div class="announcement">
                                 <hgroup class="title">
                                     <h2>ประกาศจาก <span>Srikrung</span></h2>
@@ -172,10 +218,10 @@
                                 </ul>
                                 <a class="viewall" href="" title="ดูทั้งหมด">ดูทั้งหมด</a>
                             </div>
-<!-- END ANNOUNCEMENT -->
+<!-- END ANNOUNCEMENT >
                         </div>
                     </div>
-<!-- END CONTENT -->
+<!-- END CONTENT >
                 </div>
             </div>
 <!-- END CONTAINER -->
@@ -183,32 +229,29 @@
 <!-- FOOTER -->
         <footer>
             <div class="grid">
-                <div class="box">
-                    <h2>ศรีกรุงโบรคเกอร์ จำกัด</h2>
-                    <p>ข่าวดีสำหรับสมาชิกที่มีรถกระบะอายุตั้งแต่ 2-5 ปีที่จดทะเบียนเป็นรถส่วนบุคคลเท่านั้นไม่ใช้สำหรับรับจ้างหรือให้เช่า ข่าวดีสำหรับสมาชิกที่มีรถกระบะอายุตั้งแต่ 2-5 ปีที่จดทะเบียนเป็นรถส่วนบุคคลเท่านั้นไม่ใช้สำหรับรับจ้างหรือให้เช่า</p>
+                <div class="columns">
+                    <h3>Footer Header</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, unde, eaque, omnis totam impedit sequi provident quis dolor obcaecati accusamus repellat earum perferendis tempora inventore error laborum deserunt ut dicta.</p>
+                    <p>Soluta, unde, eaque, omnis totam impedit sequi provident quis dolor obcaecati accusamus repellat earum perferendis tempora.</p>
                 </div>
-                <div class="box">
-                    <h2>ที่อยู่ติดต่อ</h2>
-                    <p>2 ซอยเอกชัย 83/1 ถนนเอกชัย แขวงบางบอน
-                    <br />เขตบางบอน กรุงเทพมหานคร 10150
-                    <br />หมายเลขโทรศัพท์ 02-867-3888 (อัตโนมัติ 30 คู่สาย)
-                    <br />Fax - 02-867-3803-8
-                    <br />E-mail : srikrung@srikrungbroker.co.th
-                </p>
+                <div class="columns">
+                    <h3>Footer Header</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, unde, eaque, omnis totam impedit sequi provident quis dolor obcaecati accusamus repellat earum perferendis tempora inventore error laborum deserunt ut dicta.</p>
                 </div>
-                <div class="box">
-                    <h2>เมนูลัด</h2>
-                    <nav class="footnav">
-                        <ul>
-                            <li><a href="" title="หน้าหลัก">หน้าหลัก</a></li>
-                            <li><a href="" title="สมัครสมาชิก">สมัครสมาชิก</a></li>
-                            <li><a href="" title="สินค้า / เบี้ยประกันภัย">สินค้า / เบี้ยประกันภัย</a></li>
-                            <li><a href="" title="บริการ">บริการ</a>
-                            <li><a href="" title="ติดต่อเรา">ติดต่อเรา</a></li>
-                            <li><a href="" title="ถาม / ตอบ">ถาม / ตอบ</a></li>
-                        </ul>
-                    </nav>
+                <div class="columns">
+                    <h3>Footer Header</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta unde, eaque.</p>
                 </div>
+                <div class="clear"></div>
+                <nav class="footnav">
+                    <ul>
+                        <li><a href="" title="">Footer Link 1</a></li>
+                        <li><a href="" title="">Footer Link 2</a></li>
+                        <li><a href="" title="">Footer Link 3</a></li>
+                        <li><a href="" title="">Footer Link 4</a></li>
+                        <li><a href="" title="">Footer Link 5</a></li>
+                    </ul>
+                </nav>
             </div>
         </footer>
         <a class="totop" href="#" title="Back to Top">Back to Top</a>
