Install Bootstrap framework and jQuery

--- a/template.html
+++ b/template.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html lang="th">
   <head>
-    <title>Elements</title>
+    <title>Template</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#fff">
     <meta name="author" content="Page Author">
     <meta name="description" content="Page description">
+    <link rel="stylesheet" href="assets/style/stylesheet.css">
     <link rel="icon" type="image/png" href="assets/img/favicon.png"><!--[if IE]>
     <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]-->
-		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-XXXXXX');</script>
-		<!-- End Google Tag Manager -->
-  </head><body>
-		<!-- Google Tag Manager (noscript) -->
-		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXX"
-		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-		<!-- End Google Tag Manager (noscript) -->
-		<a class="skip-link u--screen-reader-text" href="#content" title="ข้ามไปยังส่วนของข้อมูล">ข้ามไปยังส่วนของข้อมูล</a>
+  </head><body><a class="skip-link u--screen-reader-text" href="#content" title="ข้ามไปยังส่วนของข้อมูล">ข้ามไปยังส่วนของข้อมูล</a>
   <div class="site-wrapper o--wrapper" id="page">
     <header class="site-header" id="masthead">
       <h1 class="u--text-align--center">Template</h1>
@@ -226,5 +215,6 @@
     <footer class="site-footer" id="colophon"></footer>
   </div>
 <script src="assets/vendors/jquery/jquery.min.js"></script>
+<script src="assets/vendors/bootstrap/bootstrap.min.js"></script>
 </body>
 </html>
