--- a/template.html
+++ b/template.html
@@ -207,6 +207,12 @@
                 <button type="button">Button</button>
               </fieldset>
             </form>
+            <hr>
+            <video controls width="250" height="200" muted>
+              <source src="#" type="video/webm">
+              <source src="#"type="video/mp4">
+                This browser does not support the HTML5 video element.
+            </video>
           </article>
         </main>
       </div>
